Fix typos in description and add demo video to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@
 # Temporary auto-generated Android Assets
 /ProceduralTerrainGenerator/[Aa]ssets/[Ss]treamingAssets/aa.meta
 /ProceduralTerrainGenerator/[Aa]ssets/[Ss]treamingAssets/aa/*
+
+/*.mkv
